js/js.translator/testData/incremental/invalidationWithPL/changeFunctionSignature/lib1/l1.4.wasm.kt
// Wasm validation phase won't pass if the function is returns a
//  string but treated as returning int at the call-site. This
//  has to be done for the Wasm test to pass.
fun foo() = 4